--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Login to GitHub Package Registry
+        uses: docker/login-action@v1.12.0
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Pull Docker image from Docker Hub
         run: |
